<resources>
    <string name="app_name">Suraksha</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="warning_cart_not_empty" translatable="false">You\'ll lose the cart items if you go back. Do you want to continue?</string>
    <string name="view_order_summary" translatable="false">VIEW ORDER SUMMARY</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDCFrm1JWEHas4IE65x1GBcUzWgmXjHW8g</string>
    <string name="qurantinec">Quarantine Centers Near Me</string>
    <string name="Call">Call</string>
    <string name="Details">Details</string>

    <string name="place_order_msg" translatable="false">Do you want to continue placing the order?</string>
    <string name="backPress">Press back again to close the application</string>
    <string name="terms_and_condition">1. Please register for home quarantine on the App only at location where you would be undergoing Isolation. Your current location at the time which you would be registering yourself for home quarantine on the App would be monitored, so please register yourself only where you are supposed to Quarantine. (Eg: If you\'re told to quarantine at home, open the app and register on the app only when you are at your house rather than any other location)<br /><br /><br />\n

2. You\'ll be monitored my the govt. through the app for home quarantine, and if you violate the quarantine, you\'ll be punished by the local governing body.\n<br /><br /><br />

3. You are supposed to click a picture and send it every 2 Hour from 9AM to 9PM on the report quarantine feature below.  Failure to do so will require the officials to call you and monitor you.\n<br /><br /><br />

4. Always keep your location on at all times, failing to do so will be considered as an act of violation and the local governing authorities can come to inspect you if they find out any default change from your location.\n<br /><br /><br />

5. Any False registrations of home quarantine will be considered a Criminal act.</string>
    <string name="request_passes">Request Passes</string>
    <string name="Quarantine">Quarantine</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="groceries_and_essentials">Groceries and Essentials</string>
    <string name="milk_and_dairy">Milk and Dairy</string>
    <string name="bread">Bread</string>
    <string name="gas">Gas</string>
    <string name="water">Water</string>
    <string name="register">Register</string>
    <string name="register_quarantine">Register Quarantine</string>
    <string name="loc_perm_denied">Location Permission Denied</string>
    <string name="failed_to_submit_report">Failed to submit report. Check your internet connection</string>
    <string name="submitter_successfully">Report has been submitted successfully</string>
    <string name="ok">Ok</string>
    <string name="cannot_get_your_reports">Cannot get your reports</string>
    <string name="try_again">Try again</string>
    <string name="failed_to_connect">Failed to connect to the server</string>
    <string name="successful">Successful</string>
    <string name="please_wait">Please Wait</string>
    <string name="reported_on">Reported on</string>
    <string name="at">at</string>
    <string name="cant_get_location">Can not get your place. Please open Google Maps and try again</string>
    <string name="successfully_registered_for_quarantine">Successfully registered for quarantine</string>


    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="quarantine_address">Quaranitine Address</string>
    <string name="authority">Quarantine Issuing Authority Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <string name="report">Take Selfie and Report</string>
    <string name="address">Address</string>
    <string name="zone">Zone</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="tnc">Points to be kept in mind while registering for home Quarantine on the Application</string>
    <string name="name_cannot_be_empty">Name field cannot be empty</string>
    <string name="address_cannot_be_empty">Address field cannot be empty</string>
    <string name="enter_valid_phno">Enter a valid phone number</string>
    <string name="authority_cannot_be_empty">Authority field cannot be empty</string>
    <string name="pick_start_date">Pick the start date</string>
    <string name="pick_end_date">Pick the end date</string>
    <string name="accept_tnc">Please accept the terms and condition</string>
    <string name="failed_to_register_quarantine">Failed to register quarantine</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="change_to_hindi">हिन्दी</string>
    <string name="change_to_english">English</string>
    <string name="faq"><p>Suraksha- An Application developed by the Final year students of NIT Jamshedpur along with the co-operation of East Singhbhum District Administration to help and protect the Citizens against Covid-19.<br /><br />
Features:<br /><br />
\n
-Home Quarantine Tracking Facility for citizens who are assigned by the government to be Quarantined, so that the govt. can monitor their movements and keep track of them. <br />
\n-Issuing local passes for Essential workers to move around your city for Essential work via the application and approved by the issuing local authority. (Coming Soon)<br />
\n-Delivery of Essential Items such as Grocery, Personal Care, Gas, Water, Medicines, etc via the Application. (Coming Soon)<br />
\n
\nCurrently, the app is on it\'s way to be uploaded on the Google Play Store, and for now it\'s shared via social media for reaching out to people who are told to be under home quarantine and isolation by the government.<br />
\n
\nTo contact developers:<br /><br />
\nEmail: suvidhajamshedpur@gmail.com
\nPhone: 7061039636 </p> </string>
    <string name="faq_btn">FAQ</string>
    <string name="main_menu1">हिन्दी</string>
    <string name="main_menu2">Log Out</string>
    <string name="in_quarantine_location">You were in quarantine location</string>
    <string name="not_in_quarantine">You were not in quarantine location</string>
    <string name="error">Error</string>
    <string name="emergency_no">Emergency Number</string>
    <string name="emergency_phone_no" translatable="false">1234567890</string>
    <string name="Emergency">Emergency</string>
    <string name="CANCEL">CANCEL</string>
    <string name="log_out_warning">Are you sure you want to log out?</string>
    <string name="day_message_left">Days Left</string>
    <string name="police_verification">Waiting for police confirmation</string>
    <string name="call">Call</string>
    <string name="cannot_sign_out">You cannot log out</string>
    <string name="type">Type</string>
    <string name="home_quarantine">Home Quarantine</string>
    <string name="special_quarantine_center">Special Quarantine Center</string>
    <string name="select_type">Please select type</string>
    <string name="turn_on_gps">Please Turn On GPS</string>
    <string name="back">Go Back</string>
    <string name="services">Services at </string>
    <string name="food_supply_center">Food supply center</string>
    <string name="corona_awareness">Corona Awareness</string>
    <string name="fields_cannot_be_empty">Please fill the compulsory details</string>
    <string name="sec_error">Please enter security code</string>
    <string name="security_code_incorrect">Security code incorrect</string>
    <string name="shop">Shops</string>
    <string name="hi">Hi</string>
    <string name="city">City</string>
    <string name="subzone">Subzone</string>
    <string name="sector">Sector</string>
    <string name="area">Area</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="no_shops_available">No Shops Available</string>
    <string name="regect">Reject</string>
    <string name="update_required">Update Required</string>
    <string name="new_version_available">A newer version is available. Please update your app.</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="failed_to_change">"Failed to change "</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="address_warning">Warning: Once you submit the area you cannot change</string>
    <string name="Add_medicine">Add medicine</string>

</resources>
