<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/border_margin"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/icon_request_passes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border_margin"
            android:background="@drawable/home_btn_shape"
            android:gravity="center"
            android:text="@string/request_passes"
            android:textAllCaps="false"
            android:textColor="@color/secondary_text_color" />
        <Button
            android:id="@+id/icon_quarentine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border_margin"
            android:background="@drawable/home_btn_shape"
            android:gravity="center"
            android:text="@string/Quarantine"
            android:textAllCaps="false"
            android:textColor="@color/secondary_text_color"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/border_margin"
            android:text="@string/coming_soon"
            android:textStyle="bold"
            android:textColor="@color/primary_text_color"

            />
        <Button
            android:id="@+id/icon_groceries"
            android:layout_width="match_parent"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border_margin"
            android:background="@drawable/home_btn_shape"
            android:gravity="center"
            android:text="@string/groceries_and_essentials"
            android:textAllCaps="false"
            android:textColor="@color/secondary_text_color" />

        <Button
            android:id="@+id/icon_milk_and_dairy"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border_margin"
            android:background="@drawable/home_btn_shape"
            android:gravity="center"
            android:text="@string/milk_and_dairy"
            android:textAllCaps="false"
            android:textColor="@color/secondary_text_color" />

        <Button
            android:id="@+id/icon_bread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border_margin"
            android:background="@drawable/home_btn_shape"
            android:gravity="center"
            android:text="@string/bread"
            android:enabled="false"
            android:textAllCaps="false"
            android:textColor="@color/secondary_text_color" />

        <Button
            android:id="@+id/icon_gas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border_margin"
            android:background="@drawable/home_btn_shape"
            android:gravity="center"
            android:text="@string/gas"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="@color/secondary_text_color" />

        <Button
            android:id="@+id/icon_water"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/border_margin"
            android:background="@drawable/home_btn_shape"
            android:gravity="center"
            android:text="@string/water"
            android:textAllCaps="false"
            android:enabled="false"
            android:textColor="@color/secondary_text_color" />

    </LinearLayout>
</ScrollView>
