<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/border_margin"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/border_margin"
        android:layout_marginBottom="@dimen/border_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/border_margin"
            android:layout_marginRight="20dp"
            />
        <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin"
            android:spinnerMode="dialog"
            android:id="@+id/address_city"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/border_margin"
        android:layout_marginBottom="@dimen/border_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/border_margin"
            android:layout_marginRight="20dp"
            />
        <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin"
            android:spinnerMode="dialog"
            android:id="@+id/address_zone"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/border_margin"
        android:layout_marginBottom="@dimen/border_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subzone"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/border_margin"
            android:layout_marginRight="20dp"
            />
        <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin"
            android:spinnerMode="dialog"
            android:id="@+id/address_subzone"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/border_margin"
        android:layout_marginBottom="@dimen/border_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sector"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/border_margin"
            android:layout_marginRight="20dp"
            />
        <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin"
            android:spinnerMode="dialog"
            android:id="@+id/address_sector"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/border_margin"
        android:layout_marginBottom="@dimen/border_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/border_margin"
            android:layout_marginRight="20dp"
            />
        <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/border_margin"
            android:spinnerMode="dialog"
            android:id="@+id/address_area"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/address_warning"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/border_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="10dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cancel"
            android:backgroundTint="@color/white"
            android:id="@+id/dialog_cancel"
            android:textColor="@color/primary_text_color"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="continue"
            android:background="@drawable/btn_shape"
            android:id="@+id/dialog_continue"
            android:textColor="@color/secondary_text_color"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
    </LinearLayout>
</LinearLayout>
</LinearLayout>